moved bouncy castle provider to cli removed commons-lang dependency